--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </label>
     <label class="logo">Shams T.</label>
     <ul>
-        <li><a class="active" href="#home">home</a></li>
+        <li><a href="#home">home</a></li>
         <li><a href="#about">about</a></li>
         <li><a href="#stills">stills</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a href="#contact">contact</a></li>
     </ul>
    </nav>
 
@@ -35,7 +35,7 @@
          <source src="assets/snake.mp4" type="video/mp4">
         </video>
         <div class="about" id="about">
-        <h1>Hi</h1><p>Hello! I'm Shams Tabrez, a passionate photographer based in Bhagalplur, Bihar, India. With a love for storytelling and a keen eye for detail, I     specialize in capturing moments that are as authentic as they are beautiful.
+        <h1>Hi</h1><p>I'm Shams Tabrez, a passionate photographer based in Bhagalplur, Bihar, India. With a love for storytelling and a keen eye for detail, I     specialize in capturing moments that are as authentic as they are beautiful.
 
             Photography has been my lifelong passion.
             
@@ -87,12 +87,22 @@
           <img src="assets/img20.jpg" style="width:100%">
           <img src="assets/img7.jpg" style="width:100%">
           <img src="assets/img9.jpg" style="width:100%">
-          <img src="assets/img11.jpg" style="width:100%">
+          
         </div>
       </div>
 
   </div>
 
+
+  <div class="container" id="contact">
+    <form>
+      <h3>Get in touch</h3>
+      <input type="text" id="name" placeholder="Your name" required>
+      <input type="email" id="email" placeholder="Email Id" required>
+      <textarea  id="message"rows="4" placeholder="How can I help you ?"></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </div>
 
   
 </body>
